--- a/Excursion/style.css
+++ b/Excursion/style.css
@@ -1,3 +1,29 @@
 body {
-    justify-content: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: black;
+    font-family: Verdana;
+}
+h1 {
+    font-weight: normal;
+    font-size: 50px;
+    color: white;
+}
+#link {
+    color: aquamarine;
+    font-size: 16px;
+}
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+p {
+    font-size: 21px;
+    color: gray;
+}
+footer {
+    text-align: right;
+    color: gray;
 }
